Issue #19442: Fix warnings emitted during Python shutdown

Warnings may be emitted during Python shutdown, like "unclosed file XXX".
During shutdown, globals()['__main__'] may be None.